# template

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml  setup.sh
template/: .gitignore  AGENT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
template/.github/: CLAUDE.md  copilot-instructions.md
template/docs/: getting-started.rst  index.rst
template/src/{{package_src}}/: __main__.py  main.py
template/tests/unit/: test_hello_world.py
